--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <div class="container">
+    <div style="margin-left:15px;margin-right:15px">
 	   <div class="row">
 			<div class="col-md-6">
 				<div class="input-group mb-3">
