prototype 2nd option

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <div style="margin-left:15px;margin-right:15px">
 	   <div class="row">
+
 			<div class="col-md-6">
 				<div class="input-group mb-3">
 				  <div class="input-group-prepend">
@@ -103,6 +104,11 @@
 				</div>		   
 			</div>
 		</div>	
+	   <div class="row">
+		<div class="">
+			<button class="btn btn-primary" type="button" onclick="javascript:history.go(-1)">Save</button>
+		</div>
+	   </div>
 	</div>
 
     <!-- Optional JavaScript -->
